# FairBuddy

./: .brewfile  .gitignore  .pre-commit-config.yaml  Brewfile  LICENSE  README.md  boot.py  boot.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gate.yml  pages-deploy.yml
docs/: architecture.drawio
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/tests/: home.spec.ts
infrastructure/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  dynamodb.py  index.html  pyproject.toml  website.py
infrastructure/tests/: __init__.py  test_dynamodb_integration.py
scripts/: pulumi-deploy.sh  pulumi-destroy.sh  pulumi-init-backend.sh  pulumi-outputs.sh  service-test.sh  service-trigger.sh
scripts/frontend/: build.sh  start.sh
scripts/pulumi/: deploy.sh  destroy.sh  init-backend.sh  outputs.sh
scripts/service/: trigger.sh
scripts/test/: action.sh  coverage.sh  frontend.sh  integration.sh  precommit.sh  unit.sh
services/: .gitignore  README.md  bom.txt  pyproject.toml  test.sh  trigger.sh
services/add_item/: README.md  main.py  pyproject.toml
services/add_item/src/add_item/: __init__.py  main.py
services/add_item/test/: test_main.py
services/add_item/tests/: test_main.py
services/libs/common/: .gitignore  pyproject.toml
services/libs/common/src/common/: __init__.py  config.py  local_lambda_context.py  logging.py
services/libs/common/tests/: test_config.py  test_local_lambda_context.py
